Resolved navigation bar z-index issue

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -51,6 +51,10 @@ section {
   flex: 1 1 auto;
 }
 
+.nav{
+  z-index:1000;
+}
+
 .video-container {
   max-height: 70vh;
 }
